Rearranging CSS and troubleshooting layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,64 +1,34 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-}
+/* Main Styles */
 
-.card {
-  border: 0px;
+#root {
+  background-color: yellow;
 }
 
 .top-navbar {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100% ;
   padding-right: 5px;
   margin-bottom: 50px;
+  max-height: fit-content;
+  background-color: aqua;
 }
 
 footer {
-  position: absolute;
-  align-content: center;
-}
-
-.profile-image img {
-    justify-content: left;
-    border-radius: 50%;
-    width: 60%;
-    float:left;
-    margin: 10px;
+  margin-top: auto;
+  width: 100%;
+  height: 3rem;
+  background-color: orange;
+  align-items: center;
 }
 
 main {
-  margin-top: 100px;
-  margin-bottom: 100px;
-}
-
-.form input, textarea, button {
-  display: block;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.form input {
-  width: 200px;
-}
-
-.project-card {
-  width: 40%;
-  max-width: 500px;
-  margin: 20px;
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
 }
 
 .container-fluid {
   max-width: 100%;
 }
 
-.card-deck {
-  display: flex;
-  flex-wrap: wrap;
-}
 
 body{
   padding-bottom: 70px;
@@ -67,6 +37,35 @@ body{
   color: #0C1F2A
 }
 
+
+/* Card Styles */
+
+
+.card {
+  border: 0px;
+}
+
+.project-card {
+  width: 40%;
+  max-width: 500px;
+  margin: 20px;
+}
+
+.card-deck {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card-footer {
+  background-color: #B4B8AB;
+}
+
+.card-body {
+  background-color: #F4F9E9;
+}
+
+
+/*Link, Button, and Navpill Styles */
 
 .nav-pills .nav-link.active, .nav-pills .show>.nav-link, .btn-primary {
   background-color: #284b63;
@@ -86,15 +85,26 @@ a:hover {
 
 }
 
+/* Other page content */
+.profile-image img {
+    justify-content: left;
+    border-radius: 50%;
+    width: 60%;
+    float:left;
+    margin: 10px;
+}
+
+.form input, textarea, button {
+  display: block;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.form input {
+  width: 200px;
+}
+
 
 h1 {
   color: #284B63
-}
-
-.card-footer {
-  background-color: #B4B8AB;
-}
-
-.card-body {
-  background-color: #F4F9E9;
 }
